docs: update rules for aws lambda config

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,8 @@
 spring:
   application:
-    name: main-server 
+    name: main-server
+
+aws:
+  region: ap-northeast-2
+  lambda:
+    function-name: your-lambda-function
