--- a/build.gradle
+++ b/build.gradle
@@ -17,13 +17,17 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	// Spring Boot Starters
-	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
+    dependencies {
+        // Spring Boot Starters
+        implementation 'org.springframework.boot:spring-boot-starter'
+        implementation 'org.springframework.boot:spring-boot-starter-web'
+        implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+        implementation 'org.springframework.boot:spring-boot-starter-validation'
+        implementation 'org.springframework.boot:spring-boot-starter-security'
+
+        // AWS SDK
+        implementation platform('software.amazon.awssdk:bom:2.25.62')
+        implementation 'software.amazon.awssdk:lambda'
 	
 	// JSON 처리
 	implementation 'com.fasterxml.jackson.core:jackson-databind'
