--- a/build.gradle
+++ b/build.gradle
@@ -32,10 +32,13 @@ dependencies {
 	// AWS SDK
 	implementation platform('software.amazon.awssdk:bom:2.28.29')
 	implementation 'software.amazon.awssdk:s3'
+	implementation 'software.amazon.awssdk:lambda'
 	
 	// Lombok
 	compileOnly 'org.projectlombok:lombok'
 	annotationProcessor 'org.projectlombok:lombok'
+	testCompileOnly 'org.projectlombok:lombok'
+	testAnnotationProcessor 'org.projectlombok:lombok'
 	
 	// Database
 	runtimeOnly 'com.h2database:h2' // 개발용 인메모리 DB
@@ -51,12 +54,22 @@ tasks.named('test') {
 
 // Test Tasks
 task testS3(type: Test) {
-	description = 'S3 순차 테스트 파일 생성'
+	description = 'S3 순차 테스트 파일 생성 (Infrastructure Adapter)'
 	useJUnitPlatform()
-	include '**/S3UtilTest.class'
+	include '**/S3ClientAdapterTest.class'
 	filter {
 		includeTestsMatching "*.createSequentialTestFile"
 	}
+	
+	testLogging {
+		events "passed", "skipped", "failed", "standardOut", "standardError"
+		showStandardStreams = true
+	}
+}
+task testLambda(type: Test) {
+	description = 'Lambda 테스트 (Infrastructure Adapter)'
+	useJUnitPlatform()
+	include '**/LambdaUtilTest.class'
 	
 	testLogging {
 		events "passed", "skipped", "failed", "standardOut", "standardError"
