--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,3 +12,6 @@ aws:
   profile: ddobak
   s3:
     test-bucket: ddobak-test  # 테스트용 버킷
+    service-bucket: ${SERVICE_BUCKET:ddobak-test}  # 서비스용 버킷
+  step-functions:
+    contract-analysis-state-machine-arn: ${ANALYSIS_STEP_FUNCTIONS_ARN:arn_for_step_functions}
