feat: AWS 자격 증명 유지

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,15 +49,27 @@ jobs:
           
           # 기존 서버 중지
           pkill -f "java -jar" || true
+          sleep 5
           
           # 빌드
           ./gradlew clean bootJar -x test
+          
+          # AWS 자격 증명 확인
+          echo "=== AWS Credentials Check ==="
+          aws sts get-caller-identity
           
           # 서버 재시작
           nohup java -jar build/libs/main-server-0.0.1-SNAPSHOT.jar > server.log 2>&1 &
           
           # 서버 상태 확인
-          sleep 10
+          sleep 15
+          echo "=== Server Process Check ==="
           ps aux | grep java
           
-          echo "Deployment completed successfully!" 
+          echo "=== Port Check ==="
+          netstat -tlnp | grep 8080
+          
+          echo "=== Server Log Check ==="
+          tail -10 server.log
+          
+          echo "Github Actions를 통한 EC2 배포 성공!" 
