fix: Github Actions 빌드 에러 수정

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,12 +1,9 @@
-# EC2 Amazon Corretto JDK ?? ??
-org.gradle.java.home=/usr/lib/jvm/java-17-amazon-corretto
-
-# Gradle JVM ??
+# Gradle JVM 설정
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 
-# Toolchain ?? ???? ????
+# Toolchain 자동 다운로드 비활성화
 org.gradle.java.installations.auto-download=false
 
-# ?? ?? ???
+# 빌드 성능 최적화
 org.gradle.parallel=true
 org.gradle.caching=true 
